Fix open print button wrapping and theme all content links correctly

--- a/src/scss/common/typography.scss
+++ b/src/scss/common/typography.scss
@@ -19,7 +19,7 @@ ul {
 // NOMENSA typography.scss
 // REPLACE ./assets WITH /assets
 
-a, div.isaac-nav-link {
+div.isaac-nav-link {
   color: $gray-194;
   display: inline-block;
   text-decoration: underline;
